--- a/Thongtin.html
+++ b/Thongtin.html
@@ -21,10 +21,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="https://nguyenminhkhang2203.github.io/BTTH-02/baithu.html#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Thông tin</a>
+                <a class="nav-link active" href="https://nguyenminhkhang2203.github.io/BTTH-02/Thongtin.html">Thông tin</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="#">Liên lạc</a>
