--- a/Home.html
+++ b/Home.html
@@ -22,13 +22,13 @@
             <ul class="navbar-nav">
               <li class="nav-item">
                 
-                <a class="nav-link active" aria-current="page" href="https://nguyenminhkhang2203.github.io/BTTH-02/baithu.html#"  >Home</a>
+                <a class="nav-link active" aria-current="page" href="https://nguyenminhkhang2203.github.io/BTTH-02/Home.html"  >Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="https://nguyenminhkhang2203.github.io/BTTH-02/Thongtin.html">Thông tin</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Liên lạc</a>
+                <a class="nav-link active" href="https://nguyenminhkhang2203.github.io/BTTH-02/lienlac.html">Liên lạc</a>
               </li>
             
             </ul>
