--- a/lienlac.html
+++ b/lienlac.html
@@ -21,7 +21,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="https://nguyenminhkhang2203.github.io/BTTH-02/baithu.html#">Home</a>
+                <a class="nav-link active" aria-current="page" href="https://nguyenminhkhang2203.github.io/BTTH-02/Home.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="https://nguyenminhkhang2203.github.io/BTTH-02/Thongtin.html">Thông tin</a>
