--- a/lienlac.html
+++ b/lienlac.html
@@ -44,16 +44,21 @@
           <div class="intro-content">
             <div class="intro-item">
               <img src="images/images (8).png" alt="" />
-              <p><H3>Liên hệ</H3>
+              <p class="text-justify">
+               <p><H3>Liên hệ</H3>
                 <h4>SĐT:     +84 0912766995</h4>
               </p>
+              </p>
             </div>
+
+
             
             <div class="intro-item">
               <img src="images/tải xuống (10).jpg" alt="" />
-              <p> <h3>Liên hệ</h3>
-                <a href="https://www.facebook.com"><h3> Nguyễn Minh Khang</h3></a>
-               
+              <p class="text-justify">
+                 <p> <h3>Liên hệ</h3>
+                    <a href="https://www.facebook.com"><h4> Nguyễn Minh Khang</h4></a>
+                 </p>
               </p>
             </div>
           </div>
