--- a/Home.html
+++ b/Home.html
@@ -37,27 +37,38 @@
       </nav>
 
 
-      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="images/274241005_373855604252938_2782294429938493753_n.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="images/272402813_1000713477530595_7911196721508114010_n.png" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="images/273971115_517617293209638_623858638388058373_n.png" class="d-block w-100" alt="...">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+      
+
+      <div class="text-center">
+        <img src="images/122348805_347789419811231_6057713103205169302_n.jpg" class="rounded" alt="...">
+        <h6>Đây là hoàng hôn ngày cuối ở đảo quân sự của mình</h6>
       </div>
+      <div class="text-center">
+        <img src="images/93423756_220715852518589_6161235860055392256_n.jpg" class="rounded" alt="...">
+        <h6>Đội tuyển trường đi đá tỉnh nè</h6>
+      </div>
+
+      <div class="text-center">
+        <img src="images/92345416_220715959185245_6767418636450660352_n.jpg" class="rounded" alt="...">
+        <h6>3 năm cấp 3 của tui,nhẹ nhàng 3 cup</h6>
+      </div>
+
+      <div class="text-center">
+        <img src="images/267144121_598638994726271_8266286522376139985_n.jpg" class="rounded" alt="...">
+        <h6>Nguyễn Minh Khang</h6>
+      </div>
+
+      <div class="text-center">
+        <img src="images/271280940_612142203375950_7571344472667239865_n.jpg" class="rounded" alt="...">
+        <h6>Buổi chiều xuân 22-2-2022</h6>
+      </div>
+
+
+      <div class="text-center">
+        <img src="images/b3768a078b41461f1f50.jpg" class="rounded" alt="...">
+        <h6>Hoàng Hôn cuối đông</h6>
+      </div>
+
 
 
 
